[UPDATE] clear active cells on col drag end.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -2721,6 +2721,7 @@ function onColDragEnd( d, i ) {
 		this.colOrder = order;
 	}
 	this._active.col = null;
+	this._active.cells = null;
 	this._active.x = null;
 
 	evt.datum = d;
