[UPDATE] README. TODO. add width and height to resize evt detail.

--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -3002,7 +3002,9 @@ function onResize() {
 	/* jslint validthis:true */
 	this.fire( 'resized', {
 		'el': 'polymer-matrix-diagram',
-		'msg': 'Received a resize event.'
+		'msg': 'Received a resize event.',
+		'width': this.clientWidth,
+		'height': this.clientHeight
 	});
 	if ( !this.$.canvas ) {
 		return;
