--- a/src/polymer-matrix-diagram.html
+++ b/src/polymer-matrix-diagram.html
@@ -21,7 +21,7 @@
 <link rel="import" href="../../polymer-d3/polymer-d3.html">
 
 <!-- ELEMENT -->
-<polymer-element name="polymer-matrix-diagram" attributes="data rowOrder colOrder config width height paddingLeft paddingRight paddingBottom paddingTop xLabel yLabel zValue zMin zMax colorScale duration autoResize autoUpdate isBrushable isSortableRows isSortableCols">
+<polymer-element name="polymer-matrix-diagram" attributes="data rowOrder colOrder config width height paddingLeft paddingRight paddingBottom paddingTop xLabel yLabel zValue zMin zMax cValue colorOrder colors duration autoResize autoUpdate isBrushable isSortableRows isSortableCols">
 
 	<template>
 
